--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-logo">
-                        <a href="#"><img src="img\logo.png" alt="logo"></a>
+                        <a href="#"><img src="img\Logo.png" alt="logo"></a>
                         <ul>
                             <li><a class="icon icon-inline" href="#"><i class="fab fa-facebook-f"></i></a></li>
                             <li><a class="icon icon-inline" href="#"><i class="fab fa-tiktok"></i></a></li>
