--- a/index.html
+++ b/index.html
@@ -38,23 +38,14 @@
         </div>
       </div>
       <div class="vc-loader" style="display: none;"></div>
-    <ul class="vc-controls" style="">
+    <ul class="vc-controls" style="display: none;">
       <li class="vc-control-play vc-control-active">Play<span></span></li>
       <li class="vc-control-rewind">Rew<span></span></li>
       <li class="vc-control-fforward">FF<span></span></li>
       <li class="vc-control-stop">Stop<span></span></li>
       <li class="vc-control-switch">Switch<span></span></li>
-    </ul><div style="" class="vc-volume-wrap">
-      <div class="vc-volume-control">
-        <div class="vc-volume-knob">
-          <div class="knob">
-            				<div class="top" style="transform: rotate(251.3deg);"></div>
-                    				<div class="base"></div>
-                          			</div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+    </ul>
+    <div style="display: none;" class="vc-volume-wrap"><div class="vc-volume-control"><div class="vc-volume-knob"><div class="knob"><div class="top" style="transform: rotate(251.3deg);"></div><div class="base"></div></div></div></div></div></div>
     <!-- //vc-container -->
     <!--//attribution-->
   </div>
@@ -71,6 +62,5 @@
           
       });
   </script>
-
 </body>
 </html>
