--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <div class="vc-tape-front vc-tape-side-b"> <span>B</span></div>
         </div>
       </div>
-      <div class="vc-loader" style=""></div>
-    <ul class="vc-controls" style="">
+      <div class="vc-loader" style="display: box;"></div>
+    <ul class="vc-controls" style="display: box;">
       <li class="vc-control-play vc-control-active">Play<span></span></li>
       <li class="vc-control-rewind">Rew<span></span></li>
       <li class="vc-control-fforward">FF<span></span></li>
