--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="vc-loader" style="display: none;"></div>
     <ul class="vc-controls" style="display: box;">
-      <li class="vc-control-play vc-control-active">Play<span></span></li>
+      <li class="vc-control-play">Play<span></span></li>
       <li class="vc-control-rewind">Rew<span></span></li>
       <li class="vc-control-fforward">FF<span></span></li>
       <li class="vc-control-stop">Stop<span></span></li>
