--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="vc-tape-front vc-tape-side-b"> <span>B</span></div>
         </div>
       </div>
-      <div class="vc-loader" style="display: none;"></div>
+      <div class="vc-loader" style="display: box;"></div>
     <ul class="vc-controls" style="display: box;">
       <li class="vc-control-play">Play<span></span></li>
       <li class="vc-control-rewind">Rew<span></span></li>
