--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sala de chat simple</title>
 <body>
-  <div style="width:800px;height:800px;">
-   <script src='https://html5-chat.com/script/42115/6266c9bf4ff14'></script>
-  </div>
+  <div estilo="ancho:800px;altura:800px;">
+    <secuencia de comandos src='https://html5-chat.com/script/42116/6266dd2ee6301'></secuencia de comandos>
+</div> 
 </body>
 </html>
