--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Sala de chat simple</title>
 <body>
   <div estilo="ancho:800px;altura:800px;">
-    <secuencia de comandos src='https://html5-chat.com/script/42116/6266dd2ee6301'></secuencia de comandos>
+    <script src='https://html5-chat.com/script/42116/6266dd2ee6301'></script>
 </div> 
 </body>
 </html>
