--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sala de chat simple</title>
+    <title>Chat SV</title>
 <body>
   <div estilo="ancho:800px;altura:800px;">
     <script src='https://html5-chat.com/script/42116/6266dd2ee6301'></script>
