--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat SV</title>
+
 <body>
-  <div estilo="ancho:800px;altura:800px;">
-    <script src='https://html5-chat.com/script/42116/6266dd2ee6301'></script>
-</div> 
+    <div style="width:800px;height:800px;">
+        <script src='https://html5-chat.com/script/42116/6266dd2ee6301'></script>
+    </div> 
 </body>
+</html>
 </html>
