--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             display: table;
             clear: both;
         }
-        /* Content */
+        /* Contenido del espacio en blanco con la imagen*/
 
         .content {
             background-color: white;
-            padding: 13px;
+            padding: 5px;
         }
-        /* The "show" class is added to the filtered elements */
+        /* The "show" se filtra en table para mostrar bien en celular*/
 
         .show {
-            display: block;
+            display: Table;
         }
         /* Style the buttons */
 
