--- a/index.html
+++ b/index.html
@@ -123,12 +123,52 @@
             color: white;
             transform: rotateY(180deg);
         }
+
+        .floatMenu{
+	position:fixed;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+        .float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#25d366;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+  font-size:30px;
+	box-shadow: 2px 2px 3px #999;
+  z-index:100;
+}
+.float:hover {
+	text-decoration: none;
+	color: #25d366;
+  background-color:#fff;
+}
+
+.my-float{
+	margin-top:16px;
+}
     </style>
+   
 </head>
 
+
 <body>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://api.whatsapp.com/send?phone=50321021134&text=Quisiera información." class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i></a>
+
+    
     <center>
         <!-- MAIN (Center website) -->
+        <div class= "floatMenu">
         <div class="main">
             <div id="myBtnContainer">
                 <button class="btn active" onclick="filterSelection('all')">Todo</button>
@@ -633,6 +673,7 @@
         </div>
     <!-- END GRID -->
     </div>
+    <center><footer><p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>Derechos Reservados 2022.</p> </footer></center>
     <!-- END MAIN -->
     <script>
         filterSelection("all")
