--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             border: 0px solid #f1f1f1;
             perspective: 1000px;
         }
-
+        
         .flip-box-inner {
             position: relative;
             width: 100%;
@@ -99,7 +99,7 @@
             transition: transform 0.8s;
             transform-style: preserve-3d;
         }
-
+        
         .flip-box:hover .flip-box-inner {
             transform: rotateY(180deg);
         }
@@ -174,7 +174,7 @@
                 <button class="btn active" onclick="filterSelection('all')">Todo</button>
                 <button class="btn" onclick="filterSelection('Sandalias')">Sandalias</button>
                 <button class="btn" onclick="filterSelection('Ropa')">Ropa</button>
-                <button class="btn" onclick="filterSelection('Jueguetes')">Juguetes</button>
+                <button class="btn" onclick="filterSelection('Damas')">Damas</button>
             </div>
     </center>
     <!-- Portfolio Gallery Grid -->
@@ -664,6 +664,182 @@
                         </div>
                         <div class="flip-box-back">
                             <h2>Precio: $4.99 dls.</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/01 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/02 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/03 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/04 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/05 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/06 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/07 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/08 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/09 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/010 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
+                            <h3>Talla: -</h3>
+                            <p>Ropa de Segunda</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="column Damas">
+            <div class="content">
+                <div class="flip-box">
+                    <div class="flip-box-inner">
+                        <div class="flip-box-front">
+                            <img src="Damas/011 Dama.jpg" alt="Damas" style="width:100%">
+                        </div>
+                        <div class="flip-box-back">
+                            <h2>Precio:-</h2>
                             <h3>Talla: -</h3>
                             <p>Ropa de Segunda</p>
                         </div>
